--- a/example_notebooks/models/tensorflow_keras_tiledb_models_example.ipynb
+++ b/example_notebooks/models/tensorflow_keras_tiledb_models_example.ipynb
@@ -283,8 +283,8 @@
     "What is really nice with saving models as TileDB array, is native versioning based on fragments as described\n",
     "[here](https://docs.tiledb.com/main/basic-concepts/data-format#immutable-fragments). We can load a model, retrain it\n",
     "with new data and update the already existing TileDB model array with the new model and metadata. All information, old\n",
-    "and new will be there and accessible. This is extremely useful when trying many different architectures for the same\n",
-    "problem and you want to keep track of all your experiments without having to store different model instances. In our case,\n",
+    "and new will be there and accessible. This is extremely useful when trying different architectures for the same\n",
+    "problem, and you want to keep track of all your experiments without having to store different model instances. In our case,\n",
     "let's continue training model_1 with the rest of our dataset and for 5 more epochs. After training is done, you will\n",
     "notice the extra directories and files (fragments) added to tiledb-keras-mnist-sequential-1 TileDB array directory,\n",
     "which keep all versions of the model."
