sklearn example noteboot, improvements to tf and pytorch notebooks

--- a/example_notebooks/models/pytorch_tiledb_models_example.ipynb
+++ b/example_notebooks/models/pytorch_tiledb_models_example.ipynb
@@ -206,23 +206,20 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
    "source": [
     "We can now save the trained model as a TileDB array. In case we want to train  the model further in a later time, we can save\n",
     "optimizer's state_dict in our TileDB array. In case we will use our model only for inference, we don't have to save optimizer's\n",
     "state_dict and we only keep model's state_dict. We first declare a PytTorchTileDB object (with the corresponding uri) and then\n",
     "save the model as a TileDB array. Finally, we can save any kind of meta data (in any structure, i.e., list, tuple or dictionary)\n",
     "by passing a dictionary to the meta attribute."
-   ]
+   ],
+   "metadata": {
+    "collapsed": false
+   }
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "pycharm": {
-     "name": "#%%\n"
-    }
-   },
    "outputs": [],
    "source": [
     "tiledb_model_1 = PyTorchTileDB(uri='tiledb-pytorch-mnist-1')\n",
@@ -233,7 +230,13 @@
     "    },\n",
     "                    meta={'epochs': epochs,\n",
     "                          'train_loss': train_losses})"
-   ]
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
   },
   {
    "cell_type": "markdown",
@@ -368,7 +371,7 @@
     "What is really nice with saving models as TileDB array, is native versioning based on fragments as described\n",
     "[here](https://docs.tiledb.com/main/basic-concepts/data-format#immutable-fragments). We can load a model, retrain it\n",
     "with new data and update the already existing TileDB model array with new model parameters and metadata. All information, old\n",
-    "and new will be there and accessible. This is extremely useful when trying different architectures for the same\n",
+    "and new will be there and accessible. This is extremely useful when you retrain with new data or trying different architectures for the same\n",
     "problem, and you want to keep track of all your experiments without having to store different model instances. In our case,\n",
     "let's continue training model_1 with the rest of our dataset and for 5 more epochs. After training is done, you will\n",
     "notice the extra directories and files (fragments) added to tiledb-keras-mnist-sequential-1 TileDB array directory,\n",
@@ -407,7 +410,7 @@
    "source": [
     "Finally, a very interesting and useful, for machine learning models, TileDB feature that is described\n",
     "[here](https://docs.tiledb.com/main/basic-concepts/data-format#groups) and [here](https://docs.tiledb.com/main/solutions/tiledb-embedded/api-usage/object-management#creating-tiledb-groups)\n",
-    "are groups. Assuming that we want to solve the MNIST problem, and we want to try several architectures. We can save each architecture\n",
+    "are groups. Assuming we want to solve the MNIST problem, and we want to try several architectures. We can save each architecture\n",
     "as a separate TileDB array with native versioning each time it is re-trained, and then organise all models that solve the same problem (MNIST)\n",
     "as a TileDB array group with any kind of hierarchy. Let's firstly define a new model architecture."
    ]
