--- a/example_notebooks/models/tensorflow_keras_tiledb_models_example.ipynb
+++ b/example_notebooks/models/tensorflow_keras_tiledb_models_example.ipynb
@@ -345,7 +345,7 @@
     "What is really nice with saving models as TileDB array, is native versioning based on fragments as described\n",
     "[here](https://docs.tiledb.com/main/basic-concepts/data-format#immutable-fragments). We can load a model, retrain it\n",
     "with new data and update the already existing TileDB model array with new model parameters and metadata. All information, old\n",
-    "and new will be there and accessible. This is extremely useful when trying different architectures for the same\n",
+    "and new will be there and accessible. This is extremely useful when you retrain with new data or trying different architectures for the same\n",
     "problem, and you want to keep track of all your experiments without having to store different model instances. In our case,\n",
     "let's continue training model_1 with the rest of our dataset and for 5 more epochs. After training is done, you will\n",
     "notice the extra directories and files (fragments) added to tiledb-keras-mnist-sequential-1 TileDB array directory,\n",
@@ -382,7 +382,7 @@
    "source": [
     "Finally, a very interesting and useful, for machine learning models, TileDB feature that is described\n",
     "[here](https://docs.tiledb.com/main/basic-concepts/data-format#groups) and [here](https://docs.tiledb.com/main/solutions/tiledb-embedded/api-usage/object-management#creating-tiledb-groups)\n",
-    "are groups. Assuming that we want to solve the MNIST problem, and we want to try several architectures. We can save each architecture\n",
+    "are groups. Assuming we want to solve the MNIST problem, and we want to try several architectures. We can save each architecture\n",
     "as a separate TileDB array with native versioning each time it is re-trained, and then organise all models that solve the same problem (MNIST)\n",
     "as a TileDB array group with any kind of hierarchy. Let's firstly define a new model architecture."
    ]
