fixed notebook imports

--- a/example_notebooks/models/pytorch_tiledb_models_example.ipynb
+++ b/example_notebooks/models/pytorch_tiledb_models_example.ipynb
@@ -28,7 +28,14 @@
     "import pickle\n",
     "import os\n",
     "\n",
-    "from models.pytorch_models import PyTorchTileDB"
+    "# Imports to avoid HTTP error when downloading MNIST dataset from\n",
+    "#  http://yann.lecun.com/exdb/mnist/train-images-idx3-ubyte.gz\n",
+    "from six.moves import urllib\n",
+    "opener = urllib.request.build_opener()\n",
+    "opener.addheaders = [('User-agent', 'Mozilla/5.0')]\n",
+    "urllib.request.install_opener(opener)\n",
+    "\n",
+    "from tiledb.ml.models.pytorch import PyTorchTileDB"
    ]
   },
   {
@@ -206,9 +213,7 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "source": [
     "We can now save the trained model as a TileDB array. In case we want to train  the model further in a later time, we can save\n",
     "optimizer's state_dict in our TileDB array. In case we will use our model only for inference, we don't have to save optimizer's\n",
@@ -522,6 +527,13 @@
    "source": [
     "tiledb.ls('MNIST_Group', lambda obj_path, obj_type: print(obj_path, obj_type))"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
