--- a/example_notebooks/models/sklearn_tiledb_models_example.ipynb
+++ b/example_notebooks/models/sklearn_tiledb_models_example.ipynb
@@ -36,7 +36,7 @@
     "from sklearn.utils import check_random_state\n",
     "from sklearn import tree\n",
     "\n",
-    "from models.sklearn_models import SklearnTileDB"
+    "from tiledb.ml.models.sklearn import SklearnTileDB"
    ]
   },
   {
