--- a/example_notebooks/models/tensorflow_keras_tiledb_models_example.ipynb
+++ b/example_notebooks/models/tensorflow_keras_tiledb_models_example.ipynb
@@ -13,7 +13,6 @@
    "execution_count": null,
    "metadata": {
     "pycharm": {
-     "is_executing": true,
      "name": "#%%\n"
     }
    },
@@ -26,7 +25,7 @@
     "import pickle\n",
     "import matplotlib.pyplot as plt\n",
     "\n",
-    "from models.tensorflow_keras_models import TensorflowTileDB"
+    "from tiledb.ml.models.tensorflow import TensorflowTileDB"
    ]
   },
   {
@@ -41,7 +40,6 @@
    "execution_count": null,
    "metadata": {
     "pycharm": {
-     "is_executing": true,
      "name": "#%%\n"
     }
    },
@@ -64,7 +62,6 @@
    "execution_count": null,
    "metadata": {
     "pycharm": {
-     "is_executing": true,
      "name": "#%%\n"
     }
    },
@@ -100,7 +97,6 @@
    "execution_count": null,
    "metadata": {
     "pycharm": {
-     "is_executing": true,
      "name": "#%%\n"
     }
    },
@@ -125,7 +121,6 @@
    "execution_count": null,
    "metadata": {
     "pycharm": {
-     "is_executing": true,
      "name": "#%%\n"
     }
    },
@@ -153,7 +148,6 @@
    "execution_count": null,
    "metadata": {
     "pycharm": {
-     "is_executing": true,
      "name": "#%%\n"
     }
    },
@@ -183,7 +177,6 @@
    "execution_count": null,
    "metadata": {
     "pycharm": {
-     "is_executing": true,
      "name": "#%%\n"
     }
    },
@@ -219,7 +212,6 @@
    "execution_count": null,
    "metadata": {
     "pycharm": {
-     "is_executing": true,
      "name": "#%%\n"
     }
    },
@@ -266,7 +258,6 @@
    "execution_count": null,
    "metadata": {
     "pycharm": {
-     "is_executing": true,
      "name": "#%%\n"
     }
    },
@@ -318,7 +309,6 @@
    "execution_count": null,
    "metadata": {
     "pycharm": {
-     "is_executing": true,
      "name": "#%%\n"
     }
    },
@@ -357,7 +347,6 @@
    "execution_count": null,
    "metadata": {
     "pycharm": {
-     "is_executing": true,
      "name": "#%%\n"
     }
    },
@@ -392,7 +381,6 @@
    "execution_count": null,
    "metadata": {
     "pycharm": {
-     "is_executing": true,
      "name": "#%%\n"
     }
    },
@@ -433,7 +421,6 @@
    "execution_count": null,
    "metadata": {
     "pycharm": {
-     "is_executing": true,
      "name": "#%%\n"
     }
    },
@@ -470,7 +457,6 @@
    "execution_count": null,
    "metadata": {
     "pycharm": {
-     "is_executing": true,
      "name": "#%%\n"
     }
    },
@@ -498,7 +484,6 @@
    "execution_count": null,
    "metadata": {
     "pycharm": {
-     "is_executing": true,
      "name": "#%%\n"
     }
    },
@@ -506,6 +491,13 @@
    "source": [
     "tiledb.ls('MNIST_Group', lambda obj_path, obj_type: print(obj_path, obj_type))"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
