update sklearn models notebook

--- a/example_notebooks/models/pytorch_tiledb_models_example.ipynb
+++ b/example_notebooks/models/pytorch_tiledb_models_example.ipynb
@@ -354,7 +354,7 @@
     "pprint(glob.glob('tiledb-pytorch-mnist-1/*'))\n",
     "\n",
     "# Open in write mode in order to add metadata\n",
-    "print('\\n')\n",
+    "print()\n",
     "model_array_1 = tiledb.open('tiledb-pytorch-mnist-1')\n",
     "for key, value in model_array_1.meta.items():\n",
     "    if isinstance(value, bytes):\n",
@@ -1470,13 +1470,14 @@
     "                          'train_loss': train_losses})\n",
     "\n",
     "# Check array directory\n",
-    "print('\\n')\n",
+    "print()\n",
     "pprint(glob.glob('tiledb-pytorch-mnist-1/*'))\n",
     "\n",
     "# tiledb.array_fragments() requires TileDB-Py version > 0.8.5\n",
     "fragments_info = tiledb.array_fragments('tiledb-pytorch-mnist-1')\n",
     "\n",
-    "print(\"\\n====== FRAGMENTS  INFO ======\")\n",
+    "print()\n",
+    "print(\"====== FRAGMENTS  INFO ======\")\n",
     "print(\"array uri: {}\".format(fragments_info.array_uri))\n",
     "print(\"number of fragments: {}\".format(len(fragments_info)))\n",
     "\n",
