--- a/example_notebooks/models/sklearn_tiledb_models_example.ipynb
+++ b/example_notebooks/models/sklearn_tiledb_models_example.ipynb
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {
     "pycharm": {
      "name": "#%%\n"
@@ -28,6 +28,7 @@
     "import tiledb\n",
     "import json\n",
     "import os\n",
+    "import glob\n",
     "\n",
     "from sklearn.datasets import fetch_openml\n",
     "from sklearn.linear_model import LogisticRegression\n",
@@ -35,6 +36,8 @@
     "from sklearn.preprocessing import StandardScaler\n",
     "from sklearn.utils import check_random_state\n",
     "from sklearn import tree\n",
+    "\n",
+    "from pprint import pprint\n",
     "\n",
     "from tiledb.ml.models.sklearn import SklearnTileDB"
    ]
@@ -52,13 +55,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {
     "pycharm": {
      "name": "#%%\n"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Data fetching...\n",
+      "Data scaling...\n"
+     ]
+    }
+   ],
    "source": [
     "train_samples = 5000\n",
     "\n",
@@ -94,13 +106,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {
     "pycharm": {
      "name": "#%%\n"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Model fit...\n",
+      "Model score...\n",
+      "Sparsity with L1 penalty: 78.12%\n",
+      "Test score with L1 penalty: 0.8309\n"
+     ]
+    }
+   ],
    "source": [
     "clf = LogisticRegression(\n",
     "    C=50. / train_samples, penalty='l1', solver='saga', tol=0.1\n",
@@ -135,7 +158,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {
     "pycharm": {
      "name": "#%%\n"
@@ -160,15 +183,37 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {
     "pycharm": {
      "name": "#%%\n"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['tiledb-sklearn-mnist-1/__meta',\n",
+      " 'tiledb-sklearn-mnist-1/__lock.tdb',\n",
+      " 'tiledb-sklearn-mnist-1/__array_schema.tdb',\n",
+      " 'tiledb-sklearn-mnist-1/__1617026518252_1617026518252_90be26b060bd4818acd22bd13526beee_8',\n",
+      " 'tiledb-sklearn-mnist-1/__1617026518252_1617026518252_90be26b060bd4818acd22bd13526beee_8.ok']\n",
+      "\n",
+      "\n",
+      "Key: Sparsity_with_L1_penalty, Value: 78.125\n",
+      "Key: python_version, Value: 3.7.3\n",
+      "Key: score, Value: 0.8309\n",
+      "Key: sklearn_version, Value: 0.24.1\n"
+     ]
+    }
+   ],
    "source": [
+    "# Check array directory\n",
+    "pprint(glob.glob('tiledb-sklearn-mnist-1/*'))\n",
+    "\n",
     "# Open in write mode in order to add metadata\n",
+    "print()\n",
     "model_array_1 = tiledb.open('tiledb-sklearn-mnist-1')\n",
     "for key, value in model_array_1.meta.items():\n",
     "    if isinstance(value, bytes):\n",
@@ -188,13 +233,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {
     "pycharm": {
      "name": "#%%\n"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Key: Sparsity_with_L1_penalty, Value: 78.125\n",
+      "Key: new_meta, Value: [\"Any kind of info\"]\n",
+      "Key: python_version, Value: 3.7.3\n",
+      "Key: score, Value: 0.8309\n",
+      "Key: sklearn_version, Value: 0.24.1\n"
+     ]
+    }
+   ],
    "source": [
     "# Open the array in write mode\n",
     "with tiledb.Array('tiledb-sklearn-mnist-1', \"w\") as A:\n",
@@ -226,13 +283,95 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {
     "pycharm": {
      "name": "#%%\n"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Model score...\n",
+      "Sparsity with L1 penalty: 45.03%\n",
+      "Test score with L1 penalty: 0.7293\n",
+      "Model fit...\n",
+      "Model score...\n",
+      "Sparsity with L1 penalty: 44.76%\n",
+      "Test score with L1 penalty: 0.7305\n",
+      "\n",
+      "['tiledb-sklearn-mnist-1/__1617026714948_1617026714948_5d812d9258304da89d625c3b1a0d37f3_8',\n",
+      " 'tiledb-sklearn-mnist-1/__1617026714948_1617026714948_5d812d9258304da89d625c3b1a0d37f3_8.ok',\n",
+      " 'tiledb-sklearn-mnist-1/__meta',\n",
+      " 'tiledb-sklearn-mnist-1/__lock.tdb',\n",
+      " 'tiledb-sklearn-mnist-1/__array_schema.tdb',\n",
+      " 'tiledb-sklearn-mnist-1/__1617026796481_1617026796481_28a4ea23102d40099ceb1772626513a4_8.ok',\n",
+      " 'tiledb-sklearn-mnist-1/__1617026796481_1617026796481_28a4ea23102d40099ceb1772626513a4_8',\n",
+      " 'tiledb-sklearn-mnist-1/__1617026632600_1617026632600_43ccd847df854db3bb5998750aef7143_8',\n",
+      " 'tiledb-sklearn-mnist-1/__1617026518252_1617026518252_90be26b060bd4818acd22bd13526beee_8',\n",
+      " 'tiledb-sklearn-mnist-1/__1617026632600_1617026632600_43ccd847df854db3bb5998750aef7143_8.ok',\n",
+      " 'tiledb-sklearn-mnist-1/__1617026518252_1617026518252_90be26b060bd4818acd22bd13526beee_8.ok']\n",
+      "\n",
+      "====== FRAGMENTS  INFO ======\n",
+      "array uri: tiledb-sklearn-mnist-1\n",
+      "number of fragments: 4\n",
+      "\n",
+      "===== FRAGMENT NUMBER 0 =====\n",
+      "fragment uri: file:///Users/george/PycharmProjects/TileDB-ML/example_notebooks/models/tiledb-sklearn-mnist-1/__1617026518252_1617026518252_90be26b060bd4818acd22bd13526beee_8\n",
+      "is dense: True\n",
+      "is sparse: False\n",
+      "cell num: 1\n",
+      "has consolidated metadata: False\n",
+      "non empty domain: ((1, 1),)\n",
+      "timestamp range: (1617026518252, 1617026518252)\n",
+      "number of fragments to vacuum: 0\n",
+      "uri of fragments to vacuum: []\n",
+      "number of unconsolidated metadata: 4\n",
+      "version: 8\n",
+      "\n",
+      "===== FRAGMENT NUMBER 1 =====\n",
+      "fragment uri: file:///Users/george/PycharmProjects/TileDB-ML/example_notebooks/models/tiledb-sklearn-mnist-1/__1617026632600_1617026632600_43ccd847df854db3bb5998750aef7143_8\n",
+      "is dense: True\n",
+      "is sparse: False\n",
+      "cell num: 1\n",
+      "has consolidated metadata: False\n",
+      "non empty domain: ((1, 1),)\n",
+      "timestamp range: (1617026632600, 1617026632600)\n",
+      "number of fragments to vacuum: 0\n",
+      "uri of fragments to vacuum: []\n",
+      "number of unconsolidated metadata: 4\n",
+      "version: 8\n",
+      "\n",
+      "===== FRAGMENT NUMBER 2 =====\n",
+      "fragment uri: file:///Users/george/PycharmProjects/TileDB-ML/example_notebooks/models/tiledb-sklearn-mnist-1/__1617026714948_1617026714948_5d812d9258304da89d625c3b1a0d37f3_8\n",
+      "is dense: True\n",
+      "is sparse: False\n",
+      "cell num: 1\n",
+      "has consolidated metadata: False\n",
+      "non empty domain: ((1, 1),)\n",
+      "timestamp range: (1617026714948, 1617026714948)\n",
+      "number of fragments to vacuum: 0\n",
+      "uri of fragments to vacuum: []\n",
+      "number of unconsolidated metadata: 4\n",
+      "version: 8\n",
+      "\n",
+      "===== FRAGMENT NUMBER 3 =====\n",
+      "fragment uri: file:///Users/george/PycharmProjects/TileDB-ML/example_notebooks/models/tiledb-sklearn-mnist-1/__1617026796481_1617026796481_28a4ea23102d40099ceb1772626513a4_8\n",
+      "is dense: True\n",
+      "is sparse: False\n",
+      "cell num: 1\n",
+      "has consolidated metadata: False\n",
+      "non empty domain: ((1, 1),)\n",
+      "timestamp range: (1617026796481, 1617026796481)\n",
+      "number of fragments to vacuum: 0\n",
+      "uri of fragments to vacuum: []\n",
+      "number of unconsolidated metadata: 4\n",
+      "version: 8\n"
+     ]
+    }
+   ],
    "source": [
     "loaded_clf = tiledb_model_1.load()\n",
     "\n",
@@ -259,7 +398,39 @@
     "tiledb_model_1.save(model=loaded_clf,\n",
     "                    update=True,\n",
     "                    meta={'Sparsity_with_L1_penalty': sparsity,\n",
-    "                          'score': score})\n"
+    "                          'score': score})\n",
+    "\n",
+    "# Check array directory\n",
+    "print()\n",
+    "pprint(glob.glob('tiledb-sklearn-mnist-1/*'))\n",
+    "\n",
+    "\n",
+    "# tiledb.array_fragments() requires TileDB-Py version > 0.8.5\n",
+    "fragments_info = tiledb.array_fragments('tiledb-sklearn-mnist-1')\n",
+    "\n",
+    "print()\n",
+    "print(\"====== FRAGMENTS  INFO ======\")\n",
+    "print(\"array uri: {}\".format(fragments_info.array_uri))\n",
+    "print(\"number of fragments: {}\".format(len(fragments_info)))\n",
+    "\n",
+    "for fragment_num, fragment in enumerate(fragments_info, start=1):\n",
+    "    print()\n",
+    "    print(\"===== FRAGMENT NUMBER {} =====\".format(fragment.num))\n",
+    "    print(\"fragment uri: {}\".format(fragment.uri))\n",
+    "    print(\"is dense: {}\".format(fragment.dense))\n",
+    "    print(\"is sparse: {}\".format(fragment.sparse))\n",
+    "    print(\"cell num: {}\".format(fragment.cell_num))\n",
+    "    print(\"has consolidated metadata: {}\".format(fragment.has_consolidated_metadata))\n",
+    "    print(\"non empty domain: {}\".format(fragment.non_empty_domain))\n",
+    "    print(\"timestamp range: {}\".format(fragment.timestamp_range))\n",
+    "    print(\"number of fragments to vacuum: {}\".format(fragment.to_vacuum_num))\n",
+    "    print(\"uri of fragments to vacuum: {}\".format(fragment.to_vacuum_uri))\n",
+    "    print(\n",
+    "        \"number of unconsolidated metadata: {}\".format(\n",
+    "            fragment.unconsolidated_metadata_num\n",
+    "        )\n",
+    "    )\n",
+    "    print(\"version: {}\".format(fragment.version))\n"
    ]
   },
   {
@@ -276,13 +447,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {
     "pycharm": {
      "name": "#%%\n"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Fit...\n",
+      "Test score: 0.7729\n"
+     ]
+    }
+   ],
    "source": [
     "# We declare a Decision Tree classifier\n",
     "clf = tree.DecisionTreeClassifier()\n",
@@ -313,13 +493,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {
     "pycharm": {
      "name": "#%%\n"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "tiledb.group_create('MNIST_Group')\n",
     "os.system('mv tiledb-sklearn-mnist-1 MNIST_Group/')\n",
@@ -335,13 +526,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "metadata": {
     "pycharm": {
      "name": "#%%\n"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "file:///Users/george/PycharmProjects/TileDB-ML/example_notebooks/models/MNIST_Group/tiledb-sklearn-mnist-1 array\n",
+      "file:///Users/george/PycharmProjects/TileDB-ML/example_notebooks/models/MNIST_Group/tiledb-sklearn-mnist-2 array\n"
+     ]
+    }
+   ],
    "source": [
     "tiledb.ls('MNIST_Group', lambda obj_path, obj_type: print(obj_path, obj_type))"
    ]
