--- a/example_notebooks/models/tensorflow_keras_tiledb_models_example.ipynb
+++ b/example_notebooks/models/tensorflow_keras_tiledb_models_example.ipynb
@@ -206,7 +206,7 @@
     "pprint(glob.glob('tiledb-keras-mnist-sequential-1/*'))\n",
     "\n",
     "# Open in write mode in order to add metadata\n",
-    "print('\\n')\n",
+    "print()\n",
     "model_array_1 = tiledb.open('tiledb-keras-mnist-sequential-1')\n",
     "for key, value in model_array_1.meta.items():\n",
     "    if isinstance(value, bytes):\n",
@@ -335,11 +335,11 @@
     "                          \"status\": 'experimental'})\n",
     "\n",
     "# Check array directory\n",
-    "print('\\n')\n",
+    "print()\n",
     "pprint(glob.glob('tiledb-keras-mnist-sequential-2/*'))\n",
     "\n",
     "# Check that everything is there\n",
-    "print('\\n')\n",
+    "print()\n",
     "model_array_2 = tiledb.open('tiledb-keras-mnist-sequential-2')\n",
     "for key, value in model_array_2.meta.items():\n",
     "    if isinstance(value, bytes):\n",
@@ -600,13 +600,14 @@
     "                          \"status\": 'experimental'})\n",
     "\n",
     "# Check array directory\n",
-    "print('\\n')\n",
+    "print()\n",
     "pprint(glob.glob('tiledb-keras-mnist-sequential-1/*'))\n",
     "\n",
     "# tiledb.array_fragments() requires TileDB-Py version > 0.8.5\n",
     "fragments_info = tiledb.array_fragments('tiledb-keras-mnist-sequential-1')\n",
     "\n",
-    "print(\"\\n====== FRAGMENTS  INFO ======\")\n",
+    "print()\n",
+    "print(\"====== FRAGMENTS  INFO ======\")\n",
     "print(\"array uri: {}\".format(fragments_info.array_uri))\n",
     "print(\"number of fragments: {}\".format(len(fragments_info)))\n",
     "\n",
@@ -729,7 +730,7 @@
     "                              \"status\": 'experimental'})\n",
     "\n",
     "# Check array directory\n",
-    "print('\\n')\n",
+    "print()\n",
     "pprint(glob.glob('tiledb-keras-mnist-sequential-deeper/*'))"
    ]
   },
@@ -806,13 +807,6 @@
    "source": [
     "tiledb.ls('MNIST_Group', lambda obj_path, obj_type: print(obj_path, obj_type))"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
