--- a/examples/data_apis/tensorflow_data_api_tiledb_dense.ipynb
+++ b/examples/data_apis/tensorflow_data_api_tiledb_dense.ipynb
@@ -36,7 +36,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 2,
    "metadata": {
     "pycharm": {
      "name": "#%%\n"
@@ -269,7 +269,7 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.image.AxesImage at 0x16f282cd0>"
+       "<matplotlib.image.AxesImage at 0x17ec58e50>"
       ]
      },
      "execution_count": 6,
@@ -358,15 +358,15 @@
      "output_type": "stream",
      "text": [
       "Epoch 1/5\n",
-      "938/938 [==============================] - 1s 976us/step - loss: 0.5624 - accuracy: 0.8393\n",
+      "938/938 [==============================] - 2s 1ms/step - loss: 0.3529 - accuracy: 0.8979\n",
       "Epoch 2/5\n",
-      "938/938 [==============================] - 1s 948us/step - loss: 0.1841 - accuracy: 0.9474\n",
+      "938/938 [==============================] - 1s 1ms/step - loss: 0.1695 - accuracy: 0.9502\n",
       "Epoch 3/5\n",
-      "938/938 [==============================] - 1s 943us/step - loss: 0.1353 - accuracy: 0.9613\n",
+      "938/938 [==============================] - 1s 1ms/step - loss: 0.1255 - accuracy: 0.9633\n",
       "Epoch 4/5\n",
-      "938/938 [==============================] - 1s 948us/step - loss: 0.1079 - accuracy: 0.9674\n",
+      "938/938 [==============================] - 1s 995us/step - loss: 0.1036 - accuracy: 0.9683\n",
       "Epoch 5/5\n",
-      "938/938 [==============================] - 1s 944us/step - loss: 0.0924 - accuracy: 0.9717\n"
+      "938/938 [==============================] - 1s 1ms/step - loss: 0.0847 - accuracy: 0.9743\n"
      ]
     }
    ],
@@ -416,6 +416,13 @@
    "source": [
     "model.summary()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
